<resources>
    <string name="app_name">Astek Support</string>

    <!-- HomePage -->
    <string name="mail">Adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="connect">connexion</string>
    <string name="subscribe">Pas encore inscrit ?</string>
    <string name="forgetPassword">Mot de passe oublié ?</string>

    <!-- ProfilCreation -->
    <string name="question_who">Vous êtes :</string>
    <string name="manager">MANAGER</string>
    <string name="salarie">SALARIE</string>
    <string name="name">Nom</string>
    <string name="surname">Prénom</string>
    <string name="society">Société</string>
    <string name="birthDate">Date de naissance</string>
    <string name="enterDate">Date d\'entrée chez Astek</string>
    <string name="experiment">Nombre d\'années d\'experience totale</string>
    <string name="function">Fonction</string>
    <string name="diplom">Diplôme / Ecole</string>
    <string name="obtentionDate">Date d\'obtention</string>
    <string name="profilCreation">Créer le profil</string>
    <string name="profilUpdate">Mettre à jour le profil</string>


    <!-- Manager -->
    <string name="salaryInformation">Veuillez saisir les informations du salarié :</string>
    <string name="validate">Valider</string>

    <!-- Password Reinitialisation -->
    <string name="mailButton">Réinitialiser le mot de passe</string>

    <!-- Show Indication -->
    <string name="authentication">Authentification…</string>
    <string name="creation">Création du profil…</string>
    <string name="err_no_input">Veuillez remplir tous les champs.</string>
    <string name="err_no_checked">Veuillez cocher une valeur.</string>
    <string name="err_graduation">La note doit être comprise entre 1 et 4.</string>
    <string name="mail_send">Email envoyé avec succès</string>
    <string name="err_no_person">Aucune personne de ce nom n\'a été trouvée.</string>
    <string name="graduationInfo">1- Très Satisfaisant / 2 - Satisfaisant / 3 - Moyen / 4 – Insuffisant</string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>
    <string name="others">Autres</string>
    <string name="processing">Génération en cours…</string>
    <string name="processingOk">Fichier généré avec succès</string>

    <!-- InterviewContext -->
    <string name="titleInterviewContext">Cadre de l\'entretien</string>
    <string name="bilanDate">Année du bilan</string>
    <string name="previousInterview">Date de l\'entretien N-1</string>
    <string name="interviewDate">Date de l\'entretien N</string>
    <string name="managerName">Nom du manager</string>

    <!-- BilanMission -->
    <string name="titleBilanMission">Bilan des missions / Projets de l\'année écoulée</string>
    <string name="bilanMissionExplanation">Décrire succinctement les activités confiées,
        les compétences mises en œuvre et les résultats obtenus (Client, Période, Rôle occupé,
        Responsabilité, Environnement Technique et Fonctionnel)</string>

    <!-- PageInfo -->
    <string name="pageNumber">Page %1$s / %2$s</string>

    <!-- Appreciation -->
    <string name="titleEmployeeAppreciation">Appréciation du salarié sur les réalisations de l\'année</string>
    <string name="titleManagerAppreciation">Appréciation du manager sur les réalisations de l\'année</string>
    <string name="gain">Apports</string>
    <string name="weaknesses">Points faibles</string>
    <string name="pointsImprovement">Points à améliorer</string>

    <!-- Target -->
    <string name="titleTargetEvaluation">Evaluation des objectifs fixes EAE année N-1</string>
    <string name="target1">Rappel de l\'objectif 1</string>
    <string name="result">Résultat</string>
    <string name="targetDynamic">Rappel de l\'objectif %1$s</string>

    <!-- PerformanceEvaluation -->
    <string name="titlePerformanceEvaluation">Evaluation de la Performance du Salarié Année N (par le Manager)</string>
    <string name="verySatisfying">A - Très Satisfaisant</string>
    <string name="satisfying">B - Satisfaisant</string>
    <string name="medium">C - Moyen</string>
    <string name="insufficient">D - Insuffisant</string>
    <string name="commentary">Commentaires</string>

    <!-- Skill -->
    <string name="titleTechnicalSkill">Evaluation des compétences techniques</string>
    <string name="titleProfessionSkill">Evaluation des compétences métiers</string>
    <string name="titleFunctionalSkill">Evaluation des compétences fonctionnelles</string>
    <string name="titleManagerialSkill">Evaluation des compétences manageriales</string>
    <string name="titleBehaviouralSkill">Evaluation des compétences comportementales</string>
    <string name="titleLinguisticSkill">Evaluation des compétences linguistiques</string>
    <string name="skill1">Compétence n°1</string>
    <string name="employeeGraduation">Notation Salarié</string>
    <string name="managerGraduation">Notation Manager</string>
    <string name="skillExample">Exemples concrets - Commentaires </string>
    <string name="improvementAndGain">Points forts / A améliorer </string>
    <string name="skillDynamic">Compétence n°%1$s</string>
    <string name="skillAutonomy">Autonomie</string>
    <string name="skillAdaptability">Adaptabilité</string>
    <string name="skillTeamWork">Travail en équipe</string>
    <string name="skillCreativity">Créativité, Force de proposition</string>
    <string name="skillCommunication">Communication (écrite, orale, écoute, empathie)</string>
    <string name="skillImplication">Implication Astek</string>
    <string name="skillRespect">Maîtrise de soi, Respect</string>
    <string name="skillRigour">Rigueur, Organisation, Assiduité</string>
    <string name="skillEnglish">Anglais</string>
    <string name="skillOther">Autre langue</string>

    <!-- SkillEvaluation -->
    <string name="titleSkillEvaluation">Evaluation des compétences du Salarié Année N-1 (par le Manager)</string>
    <string name="expertise">A - Expertise</string>
    <string name="autonomousCapacity">B - Capacité autonome</string>
    <string name="partialCapacity">C - Capacité partielle</string>
    <string name="notion">D - Notion</string>

    <!-- FutureTarget -->
    <string name="titleFutureTargetEvaluation">Objectifs année N+1 / Plan d\'actions</string>
    <string name="futureTargetExplanation">Le plan d’actions concerne aussi bien les activités du salarié, sa montée en compétences ou ses besoins de formations. </string>
    <string name="futureTarget1">Objectif n°1</string>
    <string name="evaluationCriteria">Critères d\'évaluations</string>
    <string name="futureTargetDynamic">Objectif n°%1$s</string>

    <!-- Evolution -->
    <string name="titleEvolution">Evolution Professionnelle</string>
    <string name="shortEvolution">A court terme</string>
    <string name="mediumEvolution">A moyen terme</string>
    <string name="longEvolution">A long terme</string>
    <string name="justificationEvolution">Justifications / Motivations</string>
    <string name="meansEvolution">Moyens à mettre en œuvre pour y arriver (par le salarié / par la société)</string>
    <string name="mobilityEvolution">Mobilité Géographique</string>
    <string name="otherEvolution">Autres Activités (tutorat, référent, binôme d\'échange)</string>


    <!-- BilanFormation -->
    <string name="titleBilanFormation">Bilan Formations</string>
    <string name="formationEntitled">Intitulé</string>
    <string name="formationDate">Date</string>
    <string name="formationDuration">Durée</string>
    <string name="formationInitiative">Initiative</string>
    <string name="formationEmployer">Employeur</string>
    <string name="formationEmployee">Salarié</string>
    <string name="formationImplementation">Mise en œuvre de la Formation / Certification - Bénéfices sur la Mission - Bénéfices dans le metier</string>
    <string name="formationCommentary">Commentaires</string>

    <!-- WishFormation -->
    <string name="titleWishFormation">Souhaits de formations / Objectifs de certifications</string>
    <string name="formationWish">Souhait de formation</string>
    <string name="formationTarget">Objectif de certification</string>
    <string name="formationMotivation">Motivations à suivre cette formation</string>
    <string name="formationModality">Modalités / Durée / Dispositifs de Formation préconisés</string>

    <!-- CPF -->
    <string name="titleCPF">Compte Personnel de Formation</string>
    <string name="cpfNumberHours">Nombre d\'heures CPF acquises</string>
    <string name="cpfDate">A la date du</string>
    <string name="cpfQuestion">Le collaborateur est-il prêt à utiliser son CPF pour les formations souhaitées ?</string>
    <string name="cpfCommentary">Commentaires du manager sur les souhaits de formation</string>

    <!-- Synthesis -->
    <string name="titleSynthesis">Synthèse de l\'entretien par le Manager</string>
    <string name="notifyManager">Avertir le manager</string>
    <string name="mailManager">Adresse mail du manager</string>
    <string name="generateReport">Générer le rapport</string>
    <string name="mailSubjectEmployee">Support Entretien Annuel de %1$s %2$s</string>
    <string name="mailTextEmployee">Bonjour, \n \n J\'ai terminé ma partie concernant le support de l\'entretien annuel. \n \n %1$s %2$s</string>
    <string name="mailTextManager">Bonjour, \n \n Vous trouverez ci-joint le support de l\'entretien annuel complété. \n \n %1$s %2$s</string>



    <!-- PDF -->

    <!-- FirstPage -->

    <!-- FirstPage -->

    <!-- FirstPage -->

    <!-- FourthPage -->
    <string name="pdfSkillEvaluation">EVALUATIONS DES COMPETENCES</string>
    <string name="pdfSkill">COMPETENCES</string>
    <string name="pdfTechnical">TECHNIQUES</string>
    <string name="pdfProfession">METIERS</string>
    <string name="pdfFunctional">FONCTIONNELLES</string>
    <string name="pdfManagerial">MANAGERIALES</string>
    <string name="pdfBehavioural">COMPORTEMENTALES</string>
    <string name="pdfLinguistic">LINGUISTIQUES</string>

    <!-- FifthPage -->
    <string name="pdfTitlePage5">OBJECTIFS ANNEE N+1 / PLAN D\’ACTIONS</string>
    <string name="pdfTarget">Objectifs</string>

    <!-- SixthPage -->
    <string name="pdfInfoPage6">Cette partie est consacrée au projet professionnel du salarié, ses motivations
        et les moyens à mettre en œuvre pour arriver aux objectifs que le salarié se fixe sur le court, moyen et long terme.</string>
    <string name="pdfProfessionalTarget">Objectifs Professionels</string>
    <string name="pdfOthersWishes">Autres Souhaits</string>

    <!-- SeventhPage -->
    <string name="pdfInfoPage7"> Afin de vous accompagner dans votre évolution professionnelle et sur vos futures formations,
        merci de dresser un bilan des formations et des certifications suivies.</string>
    <string name="pdfFormations">Formations / Certifications</string>
    <string name="pdfFormationImplementation">Mise en œuvre de la Formation / Certification \n - Bénéfices sur la Mission \n - Bénéfices dans le metier</string>
    <string name="pdfCertificationWish">SOUHAITS DE FORMATIONS / </string>
    <string name="pdfCertificationTarget">OBJECTIFS DE CERTIFICATIONS</string>

    <!-- EighthPage -->
    <string name="pdfEmployeeSignature">Date et Signature du Salarié</string>
    <string name="pdfManagerSignature">Date et Signature du Manager</string>
    <string name="pdfSeparation">..................................................................................................................... Partie réservée au Comité Carrière</string>
    <string name="pdfDecision">DECISIONS DU COMITE CARRIERE SUR L\'EVOLUTION DU SALARIE</string>



</resources>
