<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/titleSkillEvaluation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleSkillEvaluation"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"/>


    <RadioGroup
        android:id="@+id/skillEvaluationRadioGroup"
        android:layout_below="@id/titleSkillEvaluation"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verySatisfying"
            android:id="@+id/verySatisfyingRadioButton"
            android:layout_marginTop="100dp"
            android:textSize="20sp"
            />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satisfying"
            android:id="@+id/satisfyingRadioButton"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:id="@+id/mediumRadioButton"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insufficient"
            android:id="@+id/insufficientRadioButton"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:checked="false" />
    </RadioGroup>

    <include layout="@layout/page_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/insufficientRadioButton"/>


</RelativeLayout>