<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        />


    <EditText
        android:id="@+id/mailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:background="@drawable/round_outline_enabled"
        android:layout_marginTop="110dp"
        android:layout_marginStart="160dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:textSize="15sp"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/round_outline_enabled"
        android:layout_marginTop="30dp"
        android:layout_marginStart="160dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mailEditText"
        android:textSize="15sp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/connect"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="30dp"
        />


    <TextView
        android:id="@+id/subscribeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/subscribe"
        android:layout_below="@id/connectButton"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="#2B86C6"
        />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/astek_logo"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"/>

</RelativeLayout>