<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/salaryInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salaryInformation"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="120dp"
        android:layout_above="@id/nameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_centerVertical="true"
        android:background="@drawable/round_outline"
        android:layout_marginTop="60dp"
        android:layout_marginStart="160dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textAlignment="center"
        android:inputType="textCapSentences"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:background="@drawable/round_outline"
        android:layout_marginTop="30dp"
        android:layout_marginStart="160dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nameEditText"
        android:textSize="15sp"
        android:textAlignment="center"
        android:inputType="textCapSentences"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/validate"
        android:layout_below="@+id/surnameEditText"
        android:layout_marginTop="30dp"
        />


</RelativeLayout>