<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >


    <TextView
        android:id="@+id/who"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_who"
        android:textSize="20sp"
        />

    <RadioGroup
        android:id="@+id/whoRadioGroup"
        android:layout_below="@id/who"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_who"
        android:orientation="horizontal"
        android:padding="10dp"
        android:textSize="20sp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            android:id="@+id/managerRadioButton"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salarie"
            android:id="@+id/salarieRadioButton"
            android:checked="false" />
    </RadioGroup>



    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/whoRadioGroup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="textCapSentences"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/surnameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="textCapSentences"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/societyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/surnameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/society"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/societyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="textCapSentences"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/birthLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/societyLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthDate"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/birthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="date"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enterDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterDate"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/enterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="date"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/experimentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterDateLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experiment"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/experimentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/functionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/experimentLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/function"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/functionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="textCapSentences"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/diplomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/functionLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diplom"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/diplomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="textCapSentences"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/obtentionDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/diplomLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obtentionDate"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/obtentionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="date"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/obtentionDateLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/mailCreationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mailLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/passwordCreationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="45dp"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/profilCreationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profilCreation"
        android:layout_below="@id/passwordLayout"
        android:layout_marginTop="15dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"/>

</RelativeLayout>